--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <div id="lock-screen">
         <div class="lock-title">🎄 FOR QINGQING ❤️</div>
-        <input type="password" id="password-input" class="lock-input" placeholder="纪念日 (0319)">
+        <input type="password" id="password-input" class="lock-input" placeholder="我们的纪念日是？？">
         <button class="lock-btn" onclick="checkPassword()">开启惊喜</button>
         <div class="error-msg" id="error-msg"></div>
         <div id="loading-text"></div>
@@ -819,3 +819,4 @@
     </script>
 </body>
 </html>
+
