--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>For QingQing ❤️ (Fast)</title>
+    <title>For QingQing ❤️ </title>
     <style>
         body { 
             margin: 0; overflow: hidden; background-color: #020202; 
@@ -694,3 +694,4 @@
     </script>
 </body>
 </html>
+
